syntax="proto3";

option csharp_namespace = "MeshApp.Error";

message Error {
	optional ErrorCode error_code = 1;
	optional string error_message = 2;
	optional string stack_trace = 3;
}

enum ErrorCode {
	CONNECTIVITY_ISSUE = 0;
	INTERNAL_ERROR = 1;
	NOT_FOUND = 2;
}